--- a/code.ipynb
+++ b/code.ipynb
@@ -23,6 +23,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>goodreads_book_id</th>\n",
+       "      <th>books_count</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>original_publication_year</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>title</th>\n",
+       "      <th>language_code</th>\n",
+       "      <th>average_rating</th>\n",
+       "      <th>ratings_count</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ratings_3</th>\n",
+       "      <th>ratings_4</th>\n",
+       "      <th>ratings_5</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>small_image_url</th>\n",
+       "      <th>tag_name</th>\n",
+       "      <th>class_features</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>normalized</th>\n",
+       "      <th>large_image_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2767052</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Suzanne Collins</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>The Hunger Games</td>\n",
+       "      <td>The Hunger Games (The Hunger Games, #1)</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>4780653</td>\n",
+       "      <td>...</td>\n",
+       "      <td>560092</td>\n",
+       "      <td>1481305</td>\n",
+       "      <td>2706317</td>\n",
+       "      <td>https://images.gr-assets.com/books/1447303603m...</td>\n",
+       "      <td>https://images.gr-assets.com/books/1447303603s...</td>\n",
+       "      <td>fantasy,young adult,fiction,adventure,sci fi f...</td>\n",
+       "      <td>Suzanne Collins,fantasy,young adult,fiction,ad...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>the_hunger_games</td>\n",
+       "      <td>https://images.gr-assets.com/books/1447303603l...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  book_id goodreads_book_id books_count          authors  \\\n",
+       "0       1           2767052         272  Suzanne Collins   \n",
+       "\n",
+       "  original_publication_year    original_title  \\\n",
+       "0                    2008.0  The Hunger Games   \n",
+       "\n",
+       "                                     title language_code average_rating  \\\n",
+       "0  The Hunger Games (The Hunger Games, #1)           eng           4.34   \n",
+       "\n",
+       "  ratings_count  ... ratings_3 ratings_4 ratings_5  \\\n",
+       "0       4780653  ...    560092   1481305   2706317   \n",
+       "\n",
+       "                                           image_url  \\\n",
+       "0  https://images.gr-assets.com/books/1447303603m...   \n",
+       "\n",
+       "                                     small_image_url  \\\n",
+       "0  https://images.gr-assets.com/books/1447303603s...   \n",
+       "\n",
+       "                                            tag_name  \\\n",
+       "0  fantasy,young adult,fiction,adventure,sci fi f...   \n",
+       "\n",
+       "                                      class_features cluster  \\\n",
+       "0  Suzanne Collins,fantasy,young adult,fiction,ad...      37   \n",
+       "\n",
+       "         normalized                                    large_image_url  \n",
+       "0  the_hunger_games  https://images.gr-assets.com/books/1447303603l...  \n",
+       "\n",
+       "[1 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books[books['book_id']=='1']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [
@@ -487,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15 (default, Nov 24 2022, 21:12:53) \n[GCC 11.2.0]"
+   "version": "3.7.15"
   },
   "orig_nbformat": 4,
   "vscode": {
