--- a/code.ipynb
+++ b/code.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -48,179 +48,163 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>book_id</th>\n",
-       "      <th>goodreads_book_id</th>\n",
-       "      <th>books_count</th>\n",
+       "      <th>title</th>\n",
+       "      <th>original_title</th>\n",
        "      <th>authors</th>\n",
        "      <th>original_publication_year</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>title</th>\n",
-       "      <th>language_code</th>\n",
        "      <th>average_rating</th>\n",
-       "      <th>ratings_count</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ratings_3</th>\n",
-       "      <th>ratings_4</th>\n",
-       "      <th>ratings_5</th>\n",
-       "      <th>image_url</th>\n",
-       "      <th>small_image_url</th>\n",
-       "      <th>tag_name</th>\n",
-       "      <th>class_features</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>normalized</th>\n",
        "      <th>large_image_url</th>\n",
+       "      <th>image_url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2767052</td>\n",
-       "      <td>272</td>\n",
-       "      <td>Suzanne Collins</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>The Hunger Games</td>\n",
-       "      <td>The Hunger Games (The Hunger Games, #1)</td>\n",
-       "      <td>eng</td>\n",
-       "      <td>4.34</td>\n",
-       "      <td>4780653</td>\n",
-       "      <td>...</td>\n",
-       "      <td>560092</td>\n",
-       "      <td>1481305</td>\n",
-       "      <td>2706317</td>\n",
-       "      <td>https://images.gr-assets.com/books/1447303603m...</td>\n",
-       "      <td>https://images.gr-assets.com/books/1447303603s...</td>\n",
-       "      <td>fantasy,young adult,fiction,adventure,sci fi f...</td>\n",
-       "      <td>Suzanne Collins,fantasy,young adult,fiction,ad...</td>\n",
-       "      <td>37</td>\n",
-       "      <td>the_hunger_games</td>\n",
-       "      <td>https://images.gr-assets.com/books/1447303603l...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Harry Potter and the Sorcerer's Stone (Harry P...</td>\n",
+       "      <td>Harry Potter And The Philosopher'S Stone</td>\n",
+       "      <td>J.K. Rowling, Mary GrandPré</td>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>https://images.gr-assets.com/books/1474154022l...</td>\n",
+       "      <td>https://images.gr-assets.com/books/1474154022m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>To Kill a Mockingbird</td>\n",
+       "      <td>To Kill A Mockingbird</td>\n",
+       "      <td>Harper Lee</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>https://images.gr-assets.com/books/1361975680l...</td>\n",
+       "      <td>https://images.gr-assets.com/books/1361975680m...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  book_id goodreads_book_id books_count          authors  \\\n",
-       "0       1           2767052         272  Suzanne Collins   \n",
+       "  book_id                                              title  \\\n",
+       "1       2  Harry Potter and the Sorcerer's Stone (Harry P...   \n",
+       "3       4                              To Kill a Mockingbird   \n",
        "\n",
-       "  original_publication_year    original_title  \\\n",
-       "0                    2008.0  The Hunger Games   \n",
+       "                             original_title                      authors  \\\n",
+       "1  Harry Potter And The Philosopher'S Stone  J.K. Rowling, Mary GrandPré   \n",
+       "3                     To Kill A Mockingbird                   Harper Lee   \n",
        "\n",
-       "                                     title language_code average_rating  \\\n",
-       "0  The Hunger Games (The Hunger Games, #1)           eng           4.34   \n",
+       "  original_publication_year average_rating  \\\n",
+       "1                    1997.0           4.44   \n",
+       "3                    1960.0           4.25   \n",
        "\n",
-       "  ratings_count  ... ratings_3 ratings_4 ratings_5  \\\n",
-       "0       4780653  ...    560092   1481305   2706317   \n",
+       "                                     large_image_url  \\\n",
+       "1  https://images.gr-assets.com/books/1474154022l...   \n",
+       "3  https://images.gr-assets.com/books/1361975680l...   \n",
        "\n",
-       "                                           image_url  \\\n",
-       "0  https://images.gr-assets.com/books/1447303603m...   \n",
-       "\n",
-       "                                     small_image_url  \\\n",
-       "0  https://images.gr-assets.com/books/1447303603s...   \n",
-       "\n",
-       "                                            tag_name  \\\n",
-       "0  fantasy,young adult,fiction,adventure,sci fi f...   \n",
-       "\n",
-       "                                      class_features cluster  \\\n",
-       "0  Suzanne Collins,fantasy,young adult,fiction,ad...      37   \n",
-       "\n",
-       "         normalized                                    large_image_url  \n",
-       "0  the_hunger_games  https://images.gr-assets.com/books/1447303603l...  \n",
-       "\n",
-       "[1 rows x 24 columns]"
+       "                                           image_url  \n",
+       "1  https://images.gr-assets.com/books/1474154022m...  \n",
+       "3  https://images.gr-assets.com/books/1361975680m...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "books[books['book_id']=='1']"
+    "id=[2,4]\n",
+    "id=[str(x) for x in id]\n",
+    "books[books['book_id'].isin(id)][[\"book_id\",\n",
+    "                \"title\",\n",
+    "                \"original_title\",\n",
+    "                \"authors\",\n",
+    "                \"original_publication_year\",\n",
+    "                \"average_rating\",\n",
+    "                \"large_image_url\",\n",
+    "                \"image_url\",]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Consider the Lobster and Other Essays',\n",
-       "  'original_title': 'Consider The Lobster',\n",
-       "  'authors': 'David Foster Wallace',\n",
-       "  'original_publication_year': '2005.0',\n",
-       "  'average_rating': '4.25',\n",
+       "[{'title': 'Ouran High School Host Club, Vol. 15 (Ouran High School Host Club, #15)',\n",
+       "  'original_title': '桜蘭高校ホスト部 15',\n",
+       "  'authors': 'Bisco Hatori',\n",
+       "  'original_publication_year': '2009.0',\n",
+       "  'average_rating': '4.54',\n",
        "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
        "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'},\n",
-       " {'title': 'Wicked Business (Lizzy & Diesel, #2)',\n",
-       "  'original_title': 'Wicked Business',\n",
-       "  'authors': 'Janet Evanovich',\n",
-       "  'original_publication_year': '2012.0',\n",
-       "  'average_rating': '3.76',\n",
-       "  'large_image_url': 'https://images.gr-assets.com/books/1328334213l/12275680.jpg',\n",
-       "  'image_url': 'https://images.gr-assets.com/books/1328334213m/12275680.jpg'},\n",
-       " {'title': 'False Impression',\n",
-       "  'original_title': 'False Impression',\n",
-       "  'authors': 'Jeffrey Archer',\n",
-       "  'original_publication_year': '2005.0',\n",
-       "  'average_rating': '3.67',\n",
+       " {'title': 'Vampireville (Vampire Kisses, #3)',\n",
+       "  'original_title': 'Vampireville (Vampire Kisses, #3)',\n",
+       "  'authors': 'Ellen Schreiber',\n",
+       "  'original_publication_year': '2006.0',\n",
+       "  'average_rating': '3.92',\n",
        "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
        "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'},\n",
-       " {'title': 'Saint Maybe',\n",
-       "  'original_title': 'Saint Maybe',\n",
-       "  'authors': 'Anne Tyler',\n",
-       "  'original_publication_year': '1991.0',\n",
-       "  'average_rating': '3.88',\n",
-       "  'large_image_url': 'https://images.gr-assets.com/books/1453274893l/112322.jpg',\n",
-       "  'image_url': 'https://images.gr-assets.com/books/1453274893m/112322.jpg'},\n",
-       " {'title': 'The Corrections',\n",
-       "  'original_title': 'The Corrections',\n",
-       "  'authors': 'Jonathan Franzen',\n",
-       "  'original_publication_year': '2001.0',\n",
-       "  'average_rating': '3.78',\n",
-       "  'large_image_url': 'https://images.gr-assets.com/books/1355011305l/3805.jpg',\n",
-       "  'image_url': 'https://images.gr-assets.com/books/1355011305m/3805.jpg'},\n",
-       " {'title': \"Foundation's Edge (Foundation #4)\",\n",
-       "  'original_title': \"Foundation'S Edge\",\n",
-       "  'authors': 'Isaac Asimov',\n",
-       "  'original_publication_year': '1982.0',\n",
-       "  'average_rating': '4.08',\n",
-       "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
-       "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'},\n",
-       " {'title': 'Paradise',\n",
+       " {'title': 'The Red Badge of Courage',\n",
+       "  'original_title': 'The Red Badge Of Courage',\n",
+       "  'authors': 'Stephen Crane',\n",
+       "  'original_publication_year': '1871.0',\n",
+       "  'average_rating': '3.21',\n",
+       "  'large_image_url': 'https://images.gr-assets.com/books/1327936136l/35220.jpg',\n",
+       "  'image_url': 'https://images.gr-assets.com/books/1327936136m/35220.jpg'},\n",
+       " {'title': 'Play with Me (With Me in Seattle, #3)',\n",
+       "  'original_title': 'Play With Me',\n",
+       "  'authors': 'Kristen Proby',\n",
+       "  'original_publication_year': '2013.0',\n",
+       "  'average_rating': '4.33',\n",
+       "  'large_image_url': 'https://images.gr-assets.com/books/1360471559l/17201095.jpg',\n",
+       "  'image_url': 'https://images.gr-assets.com/books/1360471559m/17201095.jpg'},\n",
+       " {'title': 'Imagine: How Creativity Works',\n",
        "  'original_title': '',\n",
-       "  'authors': 'Toni Morrison',\n",
+       "  'authors': 'Jonah Lehrer',\n",
+       "  'original_publication_year': '2012.0',\n",
+       "  'average_rating': '3.75',\n",
+       "  'large_image_url': 'https://images.gr-assets.com/books/1327000473l/12987640.jpg',\n",
+       "  'image_url': 'https://images.gr-assets.com/books/1327000473m/12987640.jpg'},\n",
+       " {'title': \"What's So Amazing About Grace?\",\n",
+       "  'original_title': \"What'S So Amazing About Grace?\",\n",
+       "  'authors': 'Philip Yancey',\n",
        "  'original_publication_year': '1997.0',\n",
-       "  'average_rating': '3.77',\n",
-       "  'large_image_url': 'https://images.gr-assets.com/books/1327935897l/5198.jpg',\n",
-       "  'image_url': 'https://images.gr-assets.com/books/1327935897m/5198.jpg'},\n",
-       " {'title': 'The Longest Day',\n",
-       "  'original_title': 'The Longest Day',\n",
-       "  'authors': 'Cornelius Ryan',\n",
-       "  'original_publication_year': '1959.0',\n",
-       "  'average_rating': '4.31',\n",
+       "  'average_rating': '4.21',\n",
+       "  'large_image_url': 'https://images.gr-assets.com/books/1328050483l/53817.jpg',\n",
+       "  'image_url': 'https://images.gr-assets.com/books/1328050483m/53817.jpg'},\n",
+       " {'title': 'The Atlantis World (The Origin Mystery, #3)',\n",
+       "  'original_title': 'The Atlantis World',\n",
+       "  'authors': 'A.G. Riddle',\n",
+       "  'original_publication_year': '2014.0',\n",
+       "  'average_rating': '3.93',\n",
        "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
        "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'},\n",
-       " {'title': \"Lyra's Oxford (His Dark Materials, #3.5)\",\n",
-       "  'original_title': \"Lyra'S Oxford\",\n",
-       "  'authors': 'Philip Pullman, John Lawrence',\n",
-       "  'original_publication_year': '2003.0',\n",
-       "  'average_rating': '3.52',\n",
+       " {'title': 'The Social Contract',\n",
+       "  'original_title': 'Du Contrat Social: Ou Principes Du Droit Politique',\n",
+       "  'authors': 'Jean-Jacques Rousseau, Maurice Cranston',\n",
+       "  'original_publication_year': '1762.0',\n",
+       "  'average_rating': '3.75',\n",
        "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
        "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'},\n",
-       " {'title': 'A Kiss in Time',\n",
-       "  'original_title': 'A Kiss In Time',\n",
-       "  'authors': 'Alex Flinn',\n",
-       "  'original_publication_year': '2008.0',\n",
-       "  'average_rating': '3.77',\n",
-       "  'large_image_url': 'https://images.gr-assets.com/books/1355870076l/5266667.jpg',\n",
-       "  'image_url': 'https://images.gr-assets.com/books/1355870076m/5266667.jpg'}]"
+       " {'title': 'The Prefect (Prefect Dreyfus Emergency, #1)',\n",
+       "  'original_title': 'The Prefect',\n",
+       "  'authors': 'Alastair Reynolds',\n",
+       "  'original_publication_year': '2007.0',\n",
+       "  'average_rating': '4.15',\n",
+       "  'large_image_url': 'https://images.gr-assets.com/books/1327988786l/89195.jpg',\n",
+       "  'image_url': 'https://images.gr-assets.com/books/1327988786m/89195.jpg'},\n",
+       " {'title': 'A Girl of the Limberlost (Limberlost, #2)',\n",
+       "  'original_title': 'A Girl Of The Limberlost',\n",
+       "  'authors': 'Gene Stratton-Porter',\n",
+       "  'original_publication_year': '1909.0',\n",
+       "  'average_rating': '4.14',\n",
+       "  'large_image_url': 'https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png',\n",
+       "  'image_url': 'https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png'}]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.15 (default, Nov 24 2022, 21:12:53) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
